@@ -227,7 +227,7 @@ gdb_expect_list "continue to printf" "$gdb_prompt$" {
 send_gdb "backtrace\n"
 gdb_expect_list "backtrace from shlibrary" "$gdb_prompt$" {
     "\r\n\032\032post-prompt\r\n"
-    "#0 .* .*printf \[^\r\n\]*\r\n"
+    "#0 .* .*printf(@\[^ ]*)? \[^\r\n\]*\r\n"
     "#1 .* main \[^\r\n\]*\r\n"
 }
 
@@ -267,7 +267,7 @@ if [target_info exists gdb,nosignals] {
     gdb_expect_list "backtrace @ signal handler" "$gdb_prompt$" {
 	"#0 +handle_USR1 \[^\r\n\]+\r\n"
 	"#1 +.signal handler called.\r\n"
-	"#2 .* .*printf \[^\r\n\]+\r\n"
+	"#2 .* .*printf(@\[^ \]*)? \[^\r\n\]+\r\n"
 	"#3 .* main \[^\r\n\]+\r\n"
     }
 }
